 . BitmapFontAtlas: works with subdirectories (issue #612)
 . Box2d: updated to r23 (pre 2.1.0) (issue #494)
 . CocosLive: Uses CL namespace (part of issue #520)
 . CocosLive: Uses ASCII encoder (issue #617)
 . Sprite: Sprite and AtlasSprite merged in just one class (issue #620)
 . Sprite: AtlasSpriteManager renamed to SpriteSheet (issue #620)
 . SpriteFrameMgr: added an easier way to create animations and sprites (issue #620)
 . TextureMgr: renamed to TextureCache (part of issue #620)

version 0.8.2 - 19-Oct-2009
 . Actions: Animate copy restoreOriginalFrame parameter (issue #602)
 . ChipmunkTest: uses new API to set director type (issue #XXX)
 . CocosLive: doesn't use deprecated methods (issue #604)
 . MenuItem: added isSelected property (issue #601)
 . Tests: removed copyrighted fonts (part of issue #596)
 
version 0.8.2-rc1 - 14-Oct-2009
 . Actions: start/stop sets the target (issue #489 and issue #589)
 . Actions: Compound actions call "inner" stop (issue #489 and #issue #589)
 . Actions: Fixed BezierBy reverse. BezierBy doesn't use startPosition (issue #586)
 . Actions: added BezierTo (issue #562)
 . Actions: RotateTo uses min distance (issue #584)
 . Actions: JumpBy/To uses parabolic function (issue #324)
 . BitmapFontAtlas: added limited unicode support (issue #596)
 . Director: Rolling back buffer format. Default buffer format is RGB565.
 . FontLabel: updates version from git 2009-10-07 (issue #582)
 . Particles: FreeMovement uses World-Coordinates (issue #241)
 . Tests: Added Particle + Parallax test (part of issue #241)
 . TileMap: TMXLayers work without tiles (issue #587)
 . TileMap: TMX maps HUGE performance boost (issue #574)
 
version 0.8.2-rc0 - 5-Oct-2009
 . Actions: Added EaseBack family actios (issue #568)
 . AtlasSprite: set atlasIndex to invalid on remove (issue #569)
 . Box2d: using google code r22 (pre v2.1.0) (issue #494)
 . CocosNode: Better message error on scale (issue #556)
 . Effects: [effect copy] works (issue #573)